changed the bg color

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
 .container div {
   /* width: 200px;
   height: 200px; */
-  background: cyan;
+  background: darkgoldenrod;
   margin-bottom: .5rem;
 }
 
